# task-8-rest-api-report-of-monaco-2018-racing

./: .gitignore  README.md  pyproject.toml  wsgi.py
my_app/: api.py  api_spec.py  app.py  constants.py  functions_view.py  resources.py
my_app/blueprints/: blueprint_json.py  blueprint_xml.py
my_app/static/: constants.py
my_app/swagger/: driver.yml  drivers.yml  report.yml
test_my_app/: conftest.py  test_api.py  test_functions.py
